client/src/utils/pgn/.antlr/pgnParser.js
// Generated from /home/mario/Desktop/ChessLion/client/src/utils/pgn/pgn.g4 by ANTLR 4.9.2
// jshint ignore: start
import antlr4 from 'antlr4';
import pgnListener from './pgnListener.js';
import pgnVisitor from './pgnVisitor.js';




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class pgnParser extends antlr4.Parser {

    static grammarFileName = "pgn.g4";
    static literalNames = [ null, "'\"'", "'{'", "'}'", "'['", "']'", "'x'", 
                            "'='", "'O-O'", "'O-O-O'", "'.'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, "FILE", "RANK", "PIECE", 
                             "GLYPH", "RESULT", "INT", "CHAR", "WS" ];
    static ruleNames = [ "string", "comment", "tag", "square", "piece", 
                         "halfMove", "fullMove", "game" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = pgnParser.ruleNames;
        this.literalNames = pgnParser.literalNames;
        this.symbolicNames = pgnParser.symbolicNames;

            this.tags = {};
            this.moves = [];

    }

    get atn() {
        return atn;
    }



	string() {
	    let localctx = new StringContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, pgnParser.RULE_string);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	         let arr = []; 
	        this.state = 17;
	        this.match(pgnParser.T__0);
	        this.state = 22;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << pgnParser.T__1) | (1 << pgnParser.T__2) | (1 << pgnParser.T__3) | (1 << pgnParser.T__4) | (1 << pgnParser.T__5) | (1 << pgnParser.T__6) | (1 << pgnParser.T__7) | (1 << pgnParser.T__8) | (1 << pgnParser.T__9) | (1 << pgnParser.FILE) | (1 << pgnParser.RANK) | (1 << pgnParser.PIECE) | (1 << pgnParser.GLYPH) | (1 << pgnParser.RESULT) | (1 << pgnParser.INT) | (1 << pgnParser.CHAR) | (1 << pgnParser.WS))) !== 0)) {
	            this.state = 18;
	            localctx.c = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(_la<=0 || _la===pgnParser.T__0) {
	                localctx.c = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	             arr.append((localctx.c===null ? null : localctx.c.text)); 
	            this.state = 24;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 25;
	        this.match(pgnParser.T__0);
	         localctx.txt =  arr.join('') 
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comment() {
	    let localctx = new CommentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, pgnParser.RULE_comment);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	         let arr = []; 
	        this.state = 29;
	        this.match(pgnParser.T__1);
	        this.state = 34;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << pgnParser.T__0) | (1 << pgnParser.T__1) | (1 << pgnParser.T__3) | (1 << pgnParser.T__4) | (1 << pgnParser.T__5) | (1 << pgnParser.T__6) | (1 << pgnParser.T__7) | (1 << pgnParser.T__8) | (1 << pgnParser.T__9) | (1 << pgnParser.FILE) | (1 << pgnParser.RANK) | (1 << pgnParser.PIECE) | (1 << pgnParser.GLYPH) | (1 << pgnParser.RESULT) | (1 << pgnParser.INT) | (1 << pgnParser.CHAR) | (1 << pgnParser.WS))) !== 0)) {
	            this.state = 30;
	            localctx.c = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(_la<=0 || _la===pgnParser.T__2) {
	                localctx.c = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	             arr.push((localctx.c===null ? null : localctx.c.text)); 
	            this.state = 36;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 37;
	        this.match(pgnParser.T__2);
	         localctx.txt =  arr.join('') 
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tag() {
	    let localctx = new TagContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, pgnParser.RULE_tag);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);

	                let arr = [];
	                let key = '';
	            
	        this.state = 41;
	        this.match(pgnParser.T__3);
	        this.state = 44; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 42;
	        		localctx.a = this._input.LT(1);
	        		_la = this._input.LA(1);
	        		if(_la<=0 || _la===pgnParser.WS) {
	        		    localctx.a = this._errHandler.recoverInline(this);
	        		}
	        		else {
	        			this._errHandler.reportMatch(this);
	        		    this.consume();
	        		}
	        		 arr.push((localctx.a===null ? null : localctx.a.text)); 
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 46; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,2, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 51;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 48;
	                this.match(pgnParser.WS); 
	            }
	            this.state = 53;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	        }

	        this.state = 54;
	        localctx.s = this.string();

	                key = arr.join('');
	                this.tags[key] = (localctx.s===null ? null : this._input.getText(new antlr4.Interval(localctx.s.start,localctx.s.stop))).substring(1, (localctx.s===null ? null : this._input.getText(new antlr4.Interval(localctx.s.start,localctx.s.stop))).length-1);
	            
	        this.state = 56;
	        this.match(pgnParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	square() {
	    let localctx = new SquareContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, pgnParser.RULE_square);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 58;
	        localctx.f = this.match(pgnParser.FILE);
	        this.state = 59;
	        localctx.r = this.match(pgnParser.RANK);
	         localctx.txt = (localctx.f===null ? null : localctx.f.text) + (localctx.r===null ? null : localctx.r.text) 
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	piece() {
	    let localctx = new PieceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, pgnParser.RULE_piece);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 62;
	        localctx.p = this.match(pgnParser.PIECE);
	        this.state = 64;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        if(la_===1) {
	            this.state = 63;
	            localctx.x = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===pgnParser.FILE || _la===pgnParser.RANK)) {
	                localctx.x = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }

	        }

	                localctx.txt =  (localctx.p===null ? null : localctx.p.text)
	                if (localctx.x != undefined)
	                    localctx.txt += (localctx.x===null ? null : localctx.x.text);
	            
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	halfMove() {
	    let localctx = new HalfMoveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, pgnParser.RULE_halfMove);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);

	                localctx.props =  {
	                    'move': undefined,
	                    'glyph': undefined,
	                    'comment': undefined,
	                }
	            
	        this.state = 93;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 69;
	            localctx.s = this.square();
	             localctx.props['move'] = localctx.s.txt; 
	            break;

	        case 2:
	            this.state = 72;
	            localctx.f = this.match(pgnParser.FILE);
	            this.state = 73;
	            this.match(pgnParser.T__5);
	            this.state = 74;
	            localctx.s = this.square();
	             localctx.props['move'] = (localctx.f===null ? null : localctx.f.text) + 'x' + localctx.s.txt; 
	            break;

	        case 3:
	            this.state = 77;
	            localctx.p = this.piece();
	            this.state = 78;
	            this.match(pgnParser.T__5);
	            this.state = 79;
	            localctx.s = this.square();
	             localctx.props['move'] = localctx.p.txt + 'x' + localctx.s.txt; 
	            break;

	        case 4:
	            this.state = 82;
	            localctx.p = this.piece();
	            this.state = 83;
	            localctx.s = this.square();
	             localctx.props['move'] = localctx.p.txt + localctx.s.txt; 
	            break;

	        case 5:
	            this.state = 86;
	            localctx.s = this.square();
	            this.state = 87;
	            this.match(pgnParser.T__6);
	            this.state = 88;
	            localctx.p = this.piece();
	             localctx.props['move'] = localctx.s.txt + '=' + localctx.p.txt; 
	            break;

	        case 6:
	            this.state = 91;
	            localctx.x = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===pgnParser.T__7 || _la===pgnParser.T__8)) {
	                localctx.x = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	             localctx.props['move'] = (localctx.x===null ? null : localctx.x.text); 
	            break;

	        }
	        this.state = 96;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===pgnParser.GLYPH) {
	            this.state = 95;
	            localctx.g = this.match(pgnParser.GLYPH);
	        }

	         localctx.props['glyph'] = (localctx.g == undefined)? undefined : (localctx.g===null ? null : localctx.g.text) 
	        this.state = 102;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 99;
	                this.match(pgnParser.WS); 
	            }
	            this.state = 104;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	        }

	        this.state = 108;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===pgnParser.T__1) {
	            this.state = 105;
	            localctx.c = this.comment();
	             localctx.props['comment'] = localctx.c.txt; 
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fullMove() {
	    let localctx = new FullMoveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, pgnParser.RULE_fullMove);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	         let move = []; 
	        this.state = 111;
	        _la = this._input.LA(1);
	        if(!(_la===pgnParser.RANK || _la===pgnParser.INT)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 112;
	        this.match(pgnParser.T__9);
	        this.state = 116;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 113;
	                this.match(pgnParser.WS); 
	            }
	            this.state = 118;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
	        }

	        this.state = 147;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case pgnParser.T__7:
	        case pgnParser.T__8:
	        case pgnParser.FILE:
	        case pgnParser.PIECE:
	            this.state = 119;
	            localctx.h1 = this.halfMove();
	             move.push(localctx.h1.props); 
	            this.state = 129;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	            if(la_===1) {
	                this.state = 122; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                do {
	                    this.state = 121;
	                    this.match(pgnParser.WS);
	                    this.state = 124; 
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                } while(_la===pgnParser.WS);
	                this.state = 126;
	                localctx.h2 = this.halfMove();
	                 move.push(localctx.h2.props); 

	            }

	                        if (move.length < 2)
	                            move.push({
	                                'move': undefined,
	                                'glyph': undefined,
	                                'comment': undefined,
	                            });
	                    
	            break;
	        case pgnParser.T__9:
	            this.state = 134; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 133;
	                this.match(pgnParser.T__9);
	                this.state = 136; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===pgnParser.T__9);
	            this.state = 141;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 138;
	                    this.match(pgnParser.WS); 
	                }
	                this.state = 143;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	            }

	            this.state = 144;
	            localctx.h = this.halfMove();

	                        move.append({
	                            'move': undefined,
	                            'glyph': undefined,
	                            'comment': undefined,
	                        });
	                        move.push(localctx.h.props);
	                    
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	         this.moves.push(move); 
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	game() {
	    let localctx = new GameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, pgnParser.RULE_game);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,16,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 153;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case pgnParser.T__3:
	                    this.state = 151;
	                    this.tag();
	                    break;
	                case pgnParser.WS:
	                    this.state = 152;
	                    this.match(pgnParser.WS);
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                } 
	            }
	            this.state = 157;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,16,this._ctx);
	        }

	        this.state = 162;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,18,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 160;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case pgnParser.RANK:
	                case pgnParser.INT:
	                    this.state = 158;
	                    this.fullMove();
	                    break;
	                case pgnParser.WS:
	                    this.state = 159;
	                    this.match(pgnParser.WS);
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                } 
	            }
	            this.state = 164;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,18,this._ctx);
	        }

	        this.state = 166;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===pgnParser.RESULT) {
	            this.state = 165;
	            this.match(pgnParser.RESULT);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

pgnParser.EOF = antlr4.Token.EOF;
pgnParser.T__0 = 1;
pgnParser.T__1 = 2;
pgnParser.T__2 = 3;
pgnParser.T__3 = 4;
pgnParser.T__4 = 5;
pgnParser.T__5 = 6;
pgnParser.T__6 = 7;
pgnParser.T__7 = 8;
pgnParser.T__8 = 9;
pgnParser.T__9 = 10;
pgnParser.FILE = 11;
pgnParser.RANK = 12;
pgnParser.PIECE = 13;
pgnParser.GLYPH = 14;
pgnParser.RESULT = 15;
pgnParser.INT = 16;
pgnParser.CHAR = 17;
pgnParser.WS = 18;

pgnParser.RULE_string = 0;
pgnParser.RULE_comment = 1;
pgnParser.RULE_tag = 2;
pgnParser.RULE_square = 3;
pgnParser.RULE_piece = 4;
pgnParser.RULE_halfMove = 5;
pgnParser.RULE_fullMove = 6;
pgnParser.RULE_game = 7;

class StringContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = pgnParser.RULE_string;
        this.txt = null
        this.c = null; // Token
    }


	enterRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.enterString(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.exitString(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof pgnVisitor ) {
	        return visitor.visitString(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class CommentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = pgnParser.RULE_comment;
        this.txt = null
        this.c = null; // Token
    }


	enterRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.enterComment(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.exitComment(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof pgnVisitor ) {
	        return visitor.visitComment(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class TagContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = pgnParser.RULE_tag;
        this.a = null; // Token
        this.s = null; // StringContext
    }

	string() {
	    return this.getTypedRuleContext(StringContext,0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(pgnParser.WS);
	    } else {
	        return this.getToken(pgnParser.WS, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.enterTag(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.exitTag(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof pgnVisitor ) {
	        return visitor.visitTag(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class SquareContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = pgnParser.RULE_square;
        this.txt = null
        this.f = null; // Token
        this.r = null; // Token
    }

	FILE() {
	    return this.getToken(pgnParser.FILE, 0);
	};

	RANK() {
	    return this.getToken(pgnParser.RANK, 0);
	};

	enterRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.enterSquare(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.exitSquare(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof pgnVisitor ) {
	        return visitor.visitSquare(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PieceContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = pgnParser.RULE_piece;
        this.txt = null
        this.p = null; // Token
        this.x = null; // Token
    }

	PIECE() {
	    return this.getToken(pgnParser.PIECE, 0);
	};

	FILE() {
	    return this.getToken(pgnParser.FILE, 0);
	};

	RANK() {
	    return this.getToken(pgnParser.RANK, 0);
	};

	enterRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.enterPiece(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.exitPiece(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof pgnVisitor ) {
	        return visitor.visitPiece(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class HalfMoveContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = pgnParser.RULE_halfMove;
        this.props = null
        this.s = null; // SquareContext
        this.f = null; // Token
        this.p = null; // PieceContext
        this.x = null; // Token
        this.g = null; // Token
        this.c = null; // CommentContext
    }

	square() {
	    return this.getTypedRuleContext(SquareContext,0);
	};

	FILE() {
	    return this.getToken(pgnParser.FILE, 0);
	};

	piece() {
	    return this.getTypedRuleContext(PieceContext,0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(pgnParser.WS);
	    } else {
	        return this.getToken(pgnParser.WS, i);
	    }
	};


	GLYPH() {
	    return this.getToken(pgnParser.GLYPH, 0);
	};

	comment() {
	    return this.getTypedRuleContext(CommentContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.enterHalfMove(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.exitHalfMove(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof pgnVisitor ) {
	        return visitor.visitHalfMove(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FullMoveContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = pgnParser.RULE_fullMove;
        this.h1 = null; // HalfMoveContext
        this.h2 = null; // HalfMoveContext
        this.h = null; // HalfMoveContext
    }

	INT() {
	    return this.getToken(pgnParser.INT, 0);
	};

	RANK() {
	    return this.getToken(pgnParser.RANK, 0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(pgnParser.WS);
	    } else {
	        return this.getToken(pgnParser.WS, i);
	    }
	};


	halfMove = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(HalfMoveContext);
	    } else {
	        return this.getTypedRuleContext(HalfMoveContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.enterFullMove(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.exitFullMove(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof pgnVisitor ) {
	        return visitor.visitFullMove(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class GameContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = pgnParser.RULE_game;
    }

	tag = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(TagContext);
	    } else {
	        return this.getTypedRuleContext(TagContext,i);
	    }
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(pgnParser.WS);
	    } else {
	        return this.getToken(pgnParser.WS, i);
	    }
	};


	fullMove = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(FullMoveContext);
	    } else {
	        return this.getTypedRuleContext(FullMoveContext,i);
	    }
	};

	RESULT() {
	    return this.getToken(pgnParser.RESULT, 0);
	};

	enterRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.enterGame(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof pgnListener ) {
	        listener.exitGame(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof pgnVisitor ) {
	        return visitor.visitGame(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}




pgnParser.StringContext = StringContext; 
pgnParser.CommentContext = CommentContext; 
pgnParser.TagContext = TagContext; 
pgnParser.SquareContext = SquareContext; 
pgnParser.PieceContext = PieceContext; 
pgnParser.HalfMoveContext = HalfMoveContext; 
pgnParser.FullMoveContext = FullMoveContext; 
pgnParser.GameContext = GameContext; 
